feat: ajusta a estrutura do modelo CriarFamiliaDto e atualiza referências no controller de beneficiários
